--- a/front2/index.html
+++ b/front2/index.html
@@ -27,7 +27,7 @@
     <section class="container" id="table"></section>
 
     <input type="text" id="name" placeholder="nome">
-    <button id="initBtn">Init</button>
+    <button id="initBtn">JOIN</button>
     <button id="diceBtn" disabled>Jogar o dado</button>
     <div id="casinhas"></div>
 
