--- a/front2/index1.html
+++ b/front2/index1.html
@@ -54,5 +54,9 @@
     </div>
     <button id="diceBtn" disabled>Jogar o dado</button>
     <div id="casinhas"></div>
+    <div id="retaFinal-0"></div>
+    <div id="retaFinal-1"></div>
+    <div id="retaFinal-2"></div>
+    <div id="retaFinal-3"></div>
   </body>
 </html>
