--- a/front2/index.html
+++ b/front2/index.html
@@ -35,6 +35,7 @@
 
     <button id="diceBtn" disabled>Jogar o dado</button>
     <section class="container" id="table"></section>
+    <section class="container" id="piecesToSelect"></section>
 
     <input type="text" id="name" placeholder="nome">
     <div id="retaFinal-0" class="container"></div>
